--- a/RedBooklet/Base.lproj/LaunchScreen.storyboard
+++ b/RedBooklet/Base.lproj/LaunchScreen.storyboard
@@ -12,20 +12,34 @@
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="SvC-m9-6hP">
+                                <rect key="frame" x="54" y="249" width="285" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="285" id="7sc-cw-mEc"/>
+                                    <constraint firstAttribute="height" constant="160" id="Mcz-rR-KFY"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="SvC-m9-6hP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="190" id="297-5i-AJR"/>
+                            <constraint firstItem="SvC-m9-6hP" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="bqZ-c8-q8n"/>
+                        </constraints>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="60" y="288"/>
         </scene>
     </scenes>
     <resources>
+        <image name="LaunchScreen" width="142.66667175292969" height="80"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
