--- a/RedBooklet/Base.lproj/Main.storyboard
+++ b/RedBooklet/Base.lproj/Main.storyboard
@@ -4,15 +4,101 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--首页-->
+        <scene sceneID="1X2-ox-qJC">
+            <objects>
+                <viewController id="abZ-Ip-Gdt" customClass="HDHomeVC" customModule="RedBooklet" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RVU-7C-IXt">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="inx-fX-4vF" customClass="ButtonBarView" customModule="XLPagerTabStrip">
+                                <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                                <color key="backgroundColor" name="theme"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="cKR-MR-gcM"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Ben-gO-ZZn">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LDy-Ln-Jyh">
+                                <rect key="frame" x="0.0" y="103" width="393" height="749"/>
+                                <viewLayoutGuide key="contentLayoutGuide" id="Ble-5m-daa"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="qGe-Te-rhi"/>
+                            </scrollView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Icg-kW-qWc"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="LDy-Ln-Jyh" firstAttribute="trailing" secondItem="Icg-kW-qWc" secondAttribute="trailing" id="2lP-Ng-3zf"/>
+                            <constraint firstItem="inx-fX-4vF" firstAttribute="leading" secondItem="Icg-kW-qWc" secondAttribute="leading" id="7Kf-K8-2Ez"/>
+                            <constraint firstItem="inx-fX-4vF" firstAttribute="top" secondItem="Icg-kW-qWc" secondAttribute="top" id="Hgu-mF-deh"/>
+                            <constraint firstItem="LDy-Ln-Jyh" firstAttribute="top" secondItem="inx-fX-4vF" secondAttribute="bottom" id="Q6u-Og-OTI"/>
+                            <constraint firstAttribute="bottom" secondItem="LDy-Ln-Jyh" secondAttribute="bottom" id="YQ8-AS-fhk"/>
+                            <constraint firstItem="Icg-kW-qWc" firstAttribute="trailing" secondItem="inx-fX-4vF" secondAttribute="trailing" id="lMS-aT-Tcm"/>
+                            <constraint firstItem="LDy-Ln-Jyh" firstAttribute="leading" secondItem="Icg-kW-qWc" secondAttribute="leading" id="ytO-8a-EOl"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="首页" id="CmN-XC-WJG">
+                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-16"/>
+                    </tabBarItem>
+                    <connections>
+                        <outlet property="buttonBarView" destination="inx-fX-4vF" id="7UB-cm-5Gt"/>
+                        <outlet property="containerView" destination="LDy-Ln-Jyh" id="jzf-iM-gMj"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cHg-0d-LP5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1719.8473282442746" y="-1413.3802816901409"/>
+        </scene>
+        <!--DiscoveryVC-->
+        <scene sceneID="Ntv-OT-A6S">
+            <objects>
+                <viewController storyboardIdentifier="DiscoveryVCIdentifier" id="JXQ-oj-ngz" customClass="HDDiscoveryVC" customModule="RedBooklet" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LU2-A7-lEa">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="CVc-wK-1rT"/>
+                        <color key="backgroundColor" systemColor="systemBlueColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vjx-Nk-Qb7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2552" y="-1413"/>
+        </scene>
+        <!--购物-->
+        <scene sceneID="bej-dB-5IQ">
+            <objects>
+                <viewController id="Rqq-Q6-BKv" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Mgx-Ee-bmY">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="hKL-Sy-xrN"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="购物" id="xat-2R-kJe">
+                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-16"/>
+                    </tabBarItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MDn-Ap-vE1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1720" y="-651"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RedBooklet" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -43,41 +129,23 @@
             </objects>
             <point key="canvasLocation" x="1720" y="788"/>
         </scene>
-        <!--购物-->
-        <scene sceneID="bej-dB-5IQ">
+        <!--我-->
+        <scene sceneID="ouE-UQ-hFd">
             <objects>
-                <viewController id="Rqq-Q6-BKv" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Mgx-Ee-bmY">
+                <viewController id="9Fg-j2-kKy" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cpO-93-aVM">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="hKL-Sy-xrN"/>
+                        <viewLayoutGuide key="safeArea" id="3m0-EO-4jo"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="购物" id="xat-2R-kJe">
+                    <tabBarItem key="tabBarItem" title="我" id="wbh-Ax-HYt">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-16"/>
                     </tabBarItem>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="MDn-Ap-vE1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kPg-Zv-04D" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1720" y="-651"/>
-        </scene>
-        <!--首页-->
-        <scene sceneID="1X2-ox-qJC">
-            <objects>
-                <viewController id="abZ-Ip-Gdt" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="RVU-7C-IXt">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="Icg-kW-qWc"/>
-                        <color key="backgroundColor" systemColor="systemCyanColor"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="首页" id="CmN-XC-WJG">
-                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-16"/>
-                    </tabBarItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cHg-0d-LP5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1720" y="-1413"/>
+            <point key="canvasLocation" x="1720" y="1501"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="ok0-1U-vCR">
@@ -100,29 +168,50 @@
             </objects>
             <point key="canvasLocation" x="796" y="58"/>
         </scene>
-        <!--我-->
-        <scene sceneID="ouE-UQ-hFd">
+        <!--NearbyVC-->
+        <scene sceneID="Cvo-ir-CPE">
             <objects>
-                <viewController id="9Fg-j2-kKy" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="cpO-93-aVM">
+                <viewController storyboardIdentifier="NearbyVCIdentifier" id="Ddt-k4-Qoi" customClass="HDNearbyVC" customModule="RedBooklet" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zcK-Xe-rA1">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="3m0-EO-4jo"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <viewLayoutGuide key="safeArea" id="goy-XJ-h6E"/>
+                        <color key="backgroundColor" systemColor="systemCyanColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="我" id="wbh-Ax-HYt">
-                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-16"/>
-                    </tabBarItem>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="kPg-Zv-04D" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MZq-GY-eqi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1720" y="1501"/>
+            <point key="canvasLocation" x="2552" y="-2101"/>
+        </scene>
+        <!--FollowVC-->
+        <scene sceneID="7Ge-rN-3rO">
+            <objects>
+                <viewController storyboardIdentifier="FollowVCIdentifier" id="vV3-qB-sKn" customClass="HDFollowVC" customModule="RedBooklet" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tiK-wf-mNO">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="OhH-c4-CAZ"/>
+                        <color key="backgroundColor" systemColor="systemBrownColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YRM-Oo-IIn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1720" y="-2101"/>
         </scene>
     </scenes>
     <resources>
         <image name="plus.app.fill" catalog="system" width="128" height="114"/>
+        <namedColor name="theme">
+            <color red="0.9882352941176471" green="0.0" blue="0.19607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBrownColor">
+            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemCyanColor">
             <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
