--- a/RedBooklet/Base.lproj/Main.storyboard
+++ b/RedBooklet/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -83,6 +84,17 @@
                     <view key="view" contentMode="scaleToFill" id="Mgx-Ee-bmY">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tnH-1G-wXh">
+                                <rect key="frame" x="191" y="308" width="75" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <segue destination="FJf-R7-8lO" kind="push" id="Nl6-LR-8NB"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="hKL-Sy-xrN"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
@@ -196,6 +208,51 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YRM-Oo-IIn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1720" y="-2101"/>
+        </scene>
+        <!--WaterfallVC-->
+        <scene sceneID="cM2-Mn-rEq">
+            <objects>
+                <collectionViewController id="FJf-R7-8lO" customClass="HDWaterfallVC" customModule="RedBooklet" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="kLx-9Y-P8V">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <collectionViewLayout key="collectionViewLayout" id="2Mz-KI-2HM" customClass="CHTCollectionViewWaterfallLayout" customModule="CHTCollectionViewWaterfallLayout"/>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="WaterfallCellIdentifier" id="yre-Sx-4nc" customClass="HDWaterfallCell" customModule="RedBooklet" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="180" height="190"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="fjj-Tr-A1C">
+                                    <rect key="frame" x="0.0" y="0.0" width="180" height="190"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Aj2-4e-hUw">
+                                            <rect key="frame" x="0.0" y="0.0" width="180" height="190"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="Aj2-4e-hUw" secondAttribute="bottom" id="8PO-8f-DPW"/>
+                                        <constraint firstAttribute="trailing" secondItem="Aj2-4e-hUw" secondAttribute="trailing" id="GoB-0R-GBc"/>
+                                        <constraint firstItem="Aj2-4e-hUw" firstAttribute="top" secondItem="fjj-Tr-A1C" secondAttribute="top" id="HJH-e0-Qli"/>
+                                        <constraint firstItem="Aj2-4e-hUw" firstAttribute="leading" secondItem="fjj-Tr-A1C" secondAttribute="leading" id="PGP-7h-8Hp"/>
+                                    </constraints>
+                                </collectionViewCellContentView>
+                                <size key="customSize" width="180" height="190"/>
+                                <connections>
+                                    <outlet property="imageView" destination="Aj2-4e-hUw" id="JDY-Qb-zUs"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="FJf-R7-8lO" id="T72-e9-arM"/>
+                            <outlet property="delegate" destination="FJf-R7-8lO" id="GsR-QF-3Jq"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="Mel-wZ-Tly"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XmI-dt-vSU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2526" y="-651"/>
         </scene>
     </scenes>
     <resources>
